estructura basica html css js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="css/estiloGithub.css">
 </head>
 <body>
+    <header>    
+        <h1>pepito</h1>
+         <p>soy estudiante de ingenieria en sistemas</p>
+    </header>
+    <section id="acercaDe">
+        <h2> acerca de mi</h2>
+        <p>soy desarrollador web</p>
+    </section>
+    <footer>
+        <p>derechos reservados</p>
+    </footer>
     <script src="script/scriptGithub.js"></script>
     <p> jiji</p>
 </body>
