--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <h2> acerca de mi</h2>
         <p>soy desarrollador web</p>
     </section>
+    <section id="habilidades">
+        <h2>habilidades</h2>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+        </ul>
+    </section>
     <footer>
         <p>derechos reservados</p>
     </footer>
